compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/ActualClass.kt
// p.B
package p

actual class B
